# PySpice

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  HANDOFF.md  README.md  TODO.md  book.toml  flake.nix  pyproject.toml  result
.github/workflows/: docs.yaml  tags.yaml  test.yaml
.scratch/universal-spice/: PRD.md
docs/: SUMMARY.md  developers.html  examples.html  guide.html  index.html  reference.html  styles.css  users.html
docs/adr/: 0001-ir-based-multi-backend-architecture.md
docs/agents/: domain.md  triage-labels.md
docs/api/: backends.md  circuit.md  getting-started.md  index.md  linting.md  models.md  results.md  simulation.md  (+3 more)
examples/: 01_voltage_divider.py  02_rc_lowpass.py  03_rlc_bandpass.py  04_bjt_amplifier.py  05_cmos_inverter.py  06_opamp_inverting.py  07_diode_rectifier.py  08_differential_pair.py  09_controlled_sources.py  10_subcircuit.py  11_jfet_amplifier.py  12_transmission_line.py  13_switches.py  14_pwl_dac.py  15_linting.py  16_simulator_config.py  17_veriloga_inline.py  18_verilog_digital.py  19_backend_hotswap.py  20_pdk_hotswap.py  21_combined_hotswap.py  22_design_testbenches.py
nix/: ngspice.nix  openvaf.nix  vacask.nix  xyce.nix
schema/: circuit-ir.schema.json
src/: cabi.rs  circuit.rs  lib.rs  normalize.rs  psf.rs  python.rs  result.rs  simulation.rs
tests/: conftest.py  test_backends.rs  test_circuit.rs  test_codegen.rs  test_codegen_runpath.rs  test_design_testbenches.py  test_python_circuit.py  test_python_examples.py  test_python_lint.py  test_python_netlist.py  test_python_simulator.py  test_python_subcircuit.py
(+37 files in other folders)
